--- a/demo.html
+++ b/demo.html
@@ -12,6 +12,9 @@
     <div class="box">
         This a test code
     </div>
+    <div class="box">
+        This a test code
+    </div>
 </body>
 </html>
 
