--- a/demo2.html
+++ b/demo2.html
@@ -9,12 +9,10 @@
 
 </head>
 <body>
-    <div class="box">
-        This a test code
+    <div>
+        This is an additional file
     </div>
-    <div class="box">
-        This a test code
-    </div>
+   
     <div>Welcome to leatn the github</div>
 </body>
 </html>
